# sudoku-solver

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: cli.h  sudokuHeader.h  sudokuUtils.h
src/: cli.c  main.c  sudokuUtils.c
